--- a/dockerfiles/docker-compose-local.yaml
+++ b/dockerfiles/docker-compose-local.yaml
@@ -1,11 +1,11 @@
 version: "3.0"
 services:
   db:
-    container_name: ""
+    container_name: "Motivation"
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_USER=
+      - POSTGRES_USER=Provonsal
       - POSTGRES_PASSWORD=
       - POSTGRES_DB=
     ports:
