--- a/dockerfiles/docker-compose-local.yaml
+++ b/dockerfiles/docker-compose-local.yaml
@@ -5,11 +5,11 @@ services:
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_USER=Provonsal
-      - POSTGRES_PASSWORD=
-      - POSTGRES_DB=
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
     ports:
-      - "7546:5432"
+      - "5432:5432"
     networks:
       - custom
 networks:
