--- a/frontend/Motivation/Motivation/Motivation.csproj
+++ b/frontend/Motivation/Motivation/Motivation.csproj
@@ -124,6 +124,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MainVieModel.cs" />
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="ViewModel.cs" />
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -136,15 +142,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="model\Deal.cs" />
+    <Compile Include="model\geting\Deal.cs" />
     <Compile Include="model\Http.cs" />
-    <Compile Include="model\login.cs" />
-    <Compile Include="model\MonthSalary.cs" />
-    <Compile Include="model\Rating.cs" />
-    <Compile Include="model\Salary.cs" />
-    <Compile Include="model\Sotrudnik.cs" />
+    <Compile Include="model\sending\login.cs" />
+    <Compile Include="model\sending\MonthSalary.cs" />
+    <Compile Include="model\geting\Rating.cs" />
+    <Compile Include="model\geting\Salary.cs" />
+    <Compile Include="model\geting\Sotrudnik.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
