--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==5.0.1
+asyncpg==0.30.0
 certifi==2024.8.30
 click==8.1.7
 dnspython==2.7.0
