--- a/frontend/Motivation/Motivation/Motivation.csproj
+++ b/frontend/Motivation/Motivation/Motivation.csproj
@@ -128,6 +128,18 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainViewModel.cs" />
+    <Compile Include="PageDeal.xaml.cs">
+      <DependentUpon>PageDeal.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageRating.xaml.cs">
+      <DependentUpon>PageRating.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageSalary.xaml.cs">
+      <DependentUpon>PageSalary.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageSotrudnik.xaml.cs">
+      <DependentUpon>PageSotrudnik.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="Login.xaml">
@@ -146,6 +158,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PageDeal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageRating.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageSalary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PageSotrudnik.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="model\geting\Deal.cs" />
